updated the index.html

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 
                 <div class="team-member">
                     <div class="team-image">
-                        <img src="https://www.facebook.com/photo.php?fbid=3307127592851079&set=pb.100006616121657.-2207520000&type=3" alt="Osman Kabba - IT Consultant">
+                        <img src="images/IT.png" alt="Osman Kabba - IT Consultant">
                     </div>
                     <div class="team-details">
                         <h3>Osman Kabba</h3>
