--- a/index.html
+++ b/index.html
@@ -326,8 +326,9 @@
     <!-- Policies Section -->
     <section id="policies" style="background-color: #f9f9f9;">
         <div class="container">
-            <div class="section-title">
-                <h2>Our Organizational Policies</h2>
+            <div class="section-title"> 
+                <h2>Our Organizational Policies <br> <h3>All these can be available upon request.</h3></h2>
+                
             </div>
             
             <div class="policies-container">
@@ -367,6 +368,7 @@
                 <div class="policy-item">
                     <h3><i class="fas fa-hand-holding-usd"></i> Grant Management Policy</h3>
                 </div>
+
             </div>
         </div>
     </section>
